# mammotab-analysis

./: analysis.ipynb  pyproject.toml
results/: Falcon3-7B-Instruct.json  llama-3.3-70b-instruct.json  meta-llama-3.1-8b-instruct.json  mistral-large-instruct.json
